--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,32 +9,36 @@ blas_impl:
 cross_compiler_target_platform:  # [win]
   - win-64                     # [win]
 c_compiler:
-  - toolchain_c                # [linux or osx]
+  - toolchain_c                # [linux64 or osx]
   # new compilers
-  - gcc                        # [linux                               and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - gcc                        # [linux64                             and (environ.get('CF_COMPILER_STACK') == 'comp7')]
   - clang                      # [osx                                 and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-
+  # non-standard arches get built with gcc
+  - gcc                        # [aarch64]
   - gcc                        # [ppc64le]
-
+  
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win and (environ.get('CF_MAX_PY_VER', '') >= '37')]
 cxx_compiler:
-  - toolchain_cxx              # [linux or osx]
+  - toolchain_cxx              # [linux64 or osx]
   # new compilers
-  - gxx                        # [linux                               and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - gxx                        # [linux64                             and (environ.get('CF_COMPILER_STACK') == 'comp7')]
   - clangxx                    # [osx                                 and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
+  - gxx                        # [aarch64]
   - gxx                        # [ppc64le]
 
   - vs2008                     # [win]
   - vs2015                     # [win]
   - vs2015                     # [win and (environ.get('CF_MAX_PY_VER', '') >= '37')]
 fortran_compiler:              # [unix or win64]
-  - toolchain_fort             # [unix and not ppc64le]
-  - gfortran                   # [(linux or osx)                      and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - toolchain_fort             # [linux64 or osx]
+  - gfortran                   # [(linux64 or osx)                      and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
+  - gfortran                   # [aarch64]
   - gfortran                   # [ppc64le]
+
   - flang                      # [win64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
@@ -59,22 +63,24 @@ VERBOSE_CM:
 
 # dual build configuration
 channel_sources:
-  - conda-forge,defaults
-  - conda-forge/label/gcc7,defaults             # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - conda-forge,defaults                        # [not aarch64]
+  - conda-forge,c4aarch64,defaults              # [aarch64]
+  - conda-forge/label/gcc7,defaults             # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
 channel_targets:
   - conda-forge main
-  - conda-forge gcc7                            # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - conda-forge gcc7                            # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
-docker_image:                                   # [linux or ppc64le]
-  - condaforge/linux-anvil                      # [linux]
-  - condaforge/linux-anvil-comp7                # [linux              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+docker_image:                                   # [linux]
+  - condaforge/linux-anvil                      # [linux64]
+  - condaforge/linux-anvil-comp7                # [linux64              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
-  - condaforge/ppc-anvil                        # [ppc64le]
+  - condaforge/linux-anvil-aarch64              # [aarch64]
+  - condaforge/linux-anvil-ppc64le              # [ppc64le]
 
-build_number_decrement:                         # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-  - 1000                                        # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-  - 0                                           # [(linux or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+build_number_decrement:                         # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - 1000                                        # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+  - 0                                           # [(linux64 or osx)     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
 zip_keys:
   -
@@ -88,13 +94,13 @@ zip_keys:
 
   # Dual compiler zip
   -                             # [                                       (environ.get('CF_COMPILER_STACK') == 'comp7')]
-    - c_compiler                # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-    - cxx_compiler              # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-    - fortran_compiler          # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-    - channel_sources           # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-    - channel_targets           # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-    - docker_image              # [linux                              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
-    - build_number_decrement    # [(linux or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - c_compiler                # [(linux64 or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - cxx_compiler              # [(linux64 or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - fortran_compiler          # [(linux64 or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - channel_sources           # [(linux64 or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - channel_targets           # [(linux64 or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - docker_image              # [linux64                              and (environ.get('CF_COMPILER_STACK') == 'comp7')]
+    - build_number_decrement    # [(linux64 or osx)                     and (environ.get('CF_COMPILER_STACK') == 'comp7')]
 
 # TODO: remove these when run_exports are added to the packages.
 pin_run_as_build:
