--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -58,7 +58,7 @@ macos_machine:                 # [osx]
   - x86_64-apple-darwin13.4.0  # [osx]
 MACOSX_DEPLOYMENT_TARGET:      # [osx]
   - 10.9                       # [osx]
-target_platform:
+target_platform:               # [win]
   - win-64                     # [win]
 VERBOSE_AT:
   - V=1
