--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -11,8 +11,10 @@ c_compiler:
 c_compiler_version:            # [unix]
   - 11                         # [osx and arm64]
   - 10                         # [osx and x86_64]
-  - 7                          # [linux64 or aarch64]
-  - 8                          # [ppc64le or armv7l]
+  - 7                          # [linux64]
+  - 7.5                        # [aarch64]
+  - 8                          # [ppc64le]
+  - 8.3                        # [armv7l]
 cxx_compiler:
   - gxx                        # [linux]
   - clangxx                    # [osx]
@@ -20,15 +22,21 @@ cxx_compiler:
 cxx_compiler_version:          # [unix]
   - 11                         # [osx and arm64]
   - 10                         # [osx and x86_64]
-  - 7                          # [linux64 or aarch64]
-  - 8                          # [ppc64le or armv7l]
+  - 7                          # [linux64]
+  - 7.5                        # [aarch64]
+  - 8                          # [ppc64le]
+  - 8.3                        # [armv7l]
 fortran_compiler:              # [unix or win64]
   - gfortran                   # [linux64 or (osx and x86_64)]
   - gfortran                   # [aarch64 or ppc64le or armv7l]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
-  - 7                          # [linux64 or (osx and x86_64) or aarch64]
-  - 8                          # [ppc64le or armv7l]
+  - 11                         # [osx and arm64]
+  - 7.5                        # [osx and x86_64]
+  - 7                          # [linux64]
+  - 7.5.0                      # [aarch64]
+  - 8                          # [ppc64le]
+  - 8.3                        # [armv7l]
   - 5                          # [win64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
