--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -55,6 +55,7 @@ cuda_compiler_version:
   - 10.0                       # [linux64]
   - 10.1                       # [linux64]
   - 10.2                       # [linux64]
+  - 11.0                       # [linux64]
 
 _libgcc_mutex:
   - 0.1 conda_forge
@@ -131,6 +132,7 @@ docker_image:                           # [os.environ.get("BUILD_PLATFORM", "").
   - condaforge/linux-anvil-cuda:10.0    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
   - condaforge/linux-anvil-cuda:10.1    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
   - condaforge/linux-anvil-cuda:10.2    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
+  - condaforge/linux-anvil-cuda:11.0    # [linux64 and (os.environ.get("BUILD_PLATFORM") == "linux-64" or os.environ.get("CONFIG_VERSION", "1") == "1")]
 
 zip_keys:
   -
