--- a/recipe/migrations/gcc930.yaml
+++ b/recipe/migrations/gcc930.yaml
@@ -11,22 +11,15 @@ __migrator:
 c_compiler_version:            # [unix]
   - 11                         # [osx and arm64]
   - 10                         # [osx and x86_64]
-  - 9                          # [linux64]
-  - 9                          # [aarch64]
-  - 9                          # [ppc64le]
+  - 9                          # [linux64 or aarch64 or ppc64le]
 
 cxx_compiler_version:          # [unix]
   - 11                         # [osx and arm64]
   - 10                         # [osx and x86_64]
-  - 9                          # [linux64]
-  - 9                          # [aarch64]
-  - 9                          # [ppc64le]
+  - 9                          # [linux64 or aarch64 or ppc64le]
 
 
 fortran_compiler_version:      # [unix or win64]
   - 11                         # [osx and arm64]
-  - 9                          # [osx and x86_64]
-  - 9                          # [linux64]
-  - 9                          # [aarch64]
-  - 9                          # [ppc64le]
+  - 9                          # [(osx and x86_64) or linux64 or aarch64 or ppc64le]
   - 5                          # [win64]
