--- a/recipe/migrations/gcc930.yaml
+++ b/recipe/migrations/gcc930.yaml
@@ -21,6 +21,8 @@ cxx_compiler_version:          # [unix]
 fortran_compiler_version:      # [unix or win64]
   - 11                         # [osx and arm64]
   - 9                          # [(osx and x86_64) or linux64 or aarch64 or ppc64le]
-  # we are keeping both for a while - we need to remove 7 when the migration is done
-  - 7                          # [(osx and x86_64) or linux64 or aarch64]
   - 5                          # [win64]
+  # we are keeping both versions for a while during the migration
+  # we need to remove 7/8 when the migration is done
+  - 7                          # [(osx and x86_64) or linux64 or aarch64]
+  - 8                          # [ppc64le]
