--- a/recipe/migrations/gcc930.yaml
+++ b/recipe/migrations/gcc930.yaml
@@ -10,19 +10,62 @@ __migrator:
 
 c_compiler_version:            # [unix]
   - 11                         # [osx and arm64]
+
   - 10                         # [osx and x86_64]
-  - 9                          # [linux64 or aarch64 or ppc64le]
+  - 10                         # [osx and x86_64]
+
+  - 9                          # [linux64]
+  - 9                          # [aarch64]
+  - 9                          # [ppc64le]
+
+  # we are keeping both versions for a while during the migration
+  # we need to remove 7/8 when the migration is done
+  - 7                          # [linux64]
+  - 7                          # [aarch64]
+  - 8                          # [ppc64le]
 
 cxx_compiler_version:          # [unix]
   - 11                         # [osx and arm64]
+
   - 10                         # [osx and x86_64]
-  - 9                          # [linux64 or aarch64 or ppc64le]
+  - 10                         # [osx and x86_64]
+
+  - 9                          # [linux64]
+  - 9                          # [aarch64]
+  - 9                          # [ppc64le]
+
+  # we are keeping both versions for a while during the migration
+  # we need to remove 7/8 when the migration is done
+  - 7                          # [linux64]
+  - 7                          # [aarch64]
+  - 8                          # [ppc64le]
 
 fortran_compiler_version:      # [unix or win64]
   - 11                         # [osx and arm64]
-  - 9                          # [(osx and x86_64) or linux64 or aarch64 or ppc64le]
-  - 5                          # [win64]
+
+  - 9                          # [osx and x86_64]
+  - 7                          # [osx and x86_64]
+
+  - 9                          # [linux64]
+  - 9                          # [aarch64]
+  - 9                          # [ppc64le]
+
   # we are keeping both versions for a while during the migration
   # we need to remove 7/8 when the migration is done
-  - 7                          # [(osx and x86_64) or linux64 or aarch64]
+  - 7                          # [linux64]
+  - 7                          # [aarch64]
   - 8                          # [ppc64le]
+
+  - 5                          # [win64]
+
+
+zip_keys:
+  -                             # [unix]
+    - c_compiler_version        # [unix]
+    - cxx_compiler_version      # [unix]
+    - fortran_compiler_version  # [unix]
+  -
+    - python
+  -                             # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
+    - cuda_compiler_version     # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
+    - docker_image              # [(os.environ.get("CONFIG_VERSION", "1") == "1" and linux64) or os.environ.get("BUILD_PLATFORM") == "linux-64"]
