--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -110,7 +110,7 @@ VERBOSE_CM:
 # dual build configuration
 channel_sources:
   - conda-forge,defaults                        # [not (aarch64 or armv7l or (osx and arm64))]
-  - conda-forge/label/llvm_rc,conda-forge,https://conda-web.anaconda.org/conda-forge    # [osx and arm64]
+  - conda-forge,https://conda-web.anaconda.org/conda-forge    # [osx and arm64]
   - conda-forge                                 # [aarch64]
   - conda-forge,c4armv7l,defaults               # [armv7l]
 
