--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -323,13 +323,17 @@ pin_run_as_build:
 
 # blas
 libblas:
-  - 3.8 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 libcblas:
-  - 3.8 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 liblapack:
-  - 3.8.0 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 liblapacke:
-  - 3.8.0 *netlib
+  - 3.8 *netlib  # [not (osx and arm64)]
+  - 3.9 *netlib  # [osx and arm64]
 blas_impl:
   - openblas
   - mkl          # [x86 or x86_64]
