--- a/recipe/migrations/gf2x13.yaml
+++ b/recipe/migrations/gf2x13.yaml
@@ -2,6 +2,8 @@ __migrator:
   build_number: 1
   kind: version
   migration_number: 1
+  check_solvable: false
+
 gf2x:
 - '1.3'
 migrator_ts: 1603782529.2453663
