--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -10,31 +10,22 @@ c_compiler:
   - vs2017                     # [win]
 c_compiler_version:            # [unix]
   - 11                         # [osx]
-  - 7                          # [linux64]
-  - 7                          # [aarch64]
-  - 8                          # [ppc64le]
-  - 8                          # [armv7l]
+  - 9                          # [linux]
 cxx_compiler:
   - gxx                        # [linux]
   - clangxx                    # [osx]
   - vs2017                     # [win]
 cxx_compiler_version:          # [unix]
   - 11                         # [osx]
-  - 7                          # [linux64]
-  - 7                          # [aarch64]
-  - 8                          # [ppc64le]
-  - 8                          # [armv7l]
+  - 9                          # [linux]
 fortran_compiler:              # [unix or win64]
   - gfortran                   # [linux64 or (osx and x86_64)]
   - gfortran                   # [aarch64 or ppc64le or armv7l]
   - flang                      # [win64]
 fortran_compiler_version:      # [unix or win64]
   - 11                         # [osx and arm64]
-  - 7                          # [osx and x86_64]
-  - 7                          # [linux64]
-  - 7                          # [aarch64]
-  - 8                          # [ppc64le]
-  - 8                          # [armv7l]
+  - 9                          # [osx and x86_64]
+  - 9                          # [linux]
   - 5                          # [win64]
 m2w64_c_compiler:              # [win]
   - m2w64-toolchain            # [win]
