--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -289,6 +289,8 @@ pin_run_as_build:
     max_pin: x.x
   qt:
     max_pin: x.x
+  qtkeychain:
+    max_pin: x.x
   readline:
     max_pin: x
   r-base:
@@ -610,6 +612,8 @@ python_impl:
   - cpython
 qt:
   - 5.12
+qtkeychain:
+  - 0.12
 re2:
   - 2020.11.01
 readline:
